k8s/spngw/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spn-gw-service
spec:
  type: ClusterIP
  selector:
    app: spn-gw
  ports:
    - name: http
      port: 80
      targetPort: 7080
    - name: https
      port: 443
      targetPort: 7443
