k8s/spngw/deployment.yaml
# SPN Gateway Deployment
# External Resource Requirements:
# 1. ConfigMap [spngw-consumer-config]: 
#    - 00-default.conf (Supervisor conf) -> /etc/supervisor/conf.d/
#    - private-ca.crt (Trusted CA)        -> /etc/ssl/workers/ca-certificates/
# 2. ConfigMap [spngw-config]:
#    - pinconfig.yaml -> /app/conf/
# 3. Secret [spngw-consumer-certs]: 
#    - worker-a.crt, worker-a.key (Auth) -> /etc/ssl/workers/client-certs/
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spn-gw
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spn-gw
  template:
    metadata:
      labels:
        app: spn-gw
    spec:
      hostAliases:
      - ip: "10.43.0.100"
        hostnames:
        - "hub1.test.v2.chip-in.net"
      containers:
      - name: spngw
        image: ghcr.io/srfeo3/spngw:latest
        ports:
        - name: gw-http
          containerPort: 7080
        - name: gw-https
          containerPort: 7443
        volumeMounts:
        - name: gw-config
          mountPath: /app/conf/pinconfig.yaml
          subPath: pinconfig.yaml
      - name: multi-consumer
        image: ghcr.io/srfeo3/spnagent/multi-consumer:latest
        volumeMounts:
        - name: supervisor-conf
          mountPath: /etc/supervisor/conf.d/
        - name: worker-ca
          mountPath: /etc/ssl/workers/ca-certificates/
        - name: worker-certs
          mountPath: /etc/ssl/workers/client-certs/
      volumes:
      - name: gw-config
        configMap:
          name: spngw-config
      - name: supervisor-conf
        configMap:
          name: spngw-consumer-supervisor-config
      - name: worker-ca
        configMap:
          name: spngw-consumer-trustca-config
      - name: worker-certs
        secret:
          secretName: spngw-consumer-certs
---
apiVersion: v1
kind: Service
metadata:
  name: spn-gw-service
spec:
  type: ClusterIP
  selector:
    app: spn-gw
  ports:
    - name: http
      port: 80
      targetPort: 7080
    - name: https
      port: 443
      targetPort: 7443
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spn-gw-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: spn-gw-service
            port:
              number: 80
