k8s/spngw/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spn-gw-ingress-http
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: www.test.v2.chip-in.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: spn-gw-service
            port:
              name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spn-gw-ingress-https
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/service.serversscheme: https
spec:
  tls:
  - hosts:
    - www.test.v2.chip-in.net
    secretName: spn-gw-cert
  rules:
  - host: www.test.v2.chip-in.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: spn-gw-service
            port:
              name: https
